--- a/style.css
+++ b/style.css
@@ -16,8 +16,14 @@ body {
     background: linear-gradient(#efefff, #cccbff);
 }
 
+.wrapper {
+    max-width: 1100px;
+    padding: 20px 10px;
+    margin: 0 60px 35px;
+    overflow: hidden;
+}
+
 .wrapper .card{
-    width: 350px;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -100,7 +106,7 @@ body {
     object-fit: cover;
     border-radius: 50%;
     border: 2px solid #fff;
-    border-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-sizing: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .card .card-profile .card-profile-info {
